--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -202,7 +202,6 @@ div#about {
   margin-bottom: 60px;
 }
 
-
 $corner-radius: 30px;
 #colored_zone {
   display: grid;
@@ -211,31 +210,10 @@ $corner-radius: 30px;
   grid-template-rows: auto;
   color: white;
   text-align: left;
-  .main-visual {
-    grid-column: 1 / span 12;
-    grid-row: auto;
-    height: 200px;
-    .top-message {
-
-    }
-    .theme-phrase {
-
-    }
-    .event-date-and-location {
-
-    }
-    .dojocon-logo {
-
-    }
-    .character {
-
-    }
-  }
   
-  .visual-delimiter {
+  .delimiter {
     grid-column: auto;
     grid-row: auto;
-
   }
   .title-welcome {
     grid-column: 3 / span 8;
@@ -382,69 +360,63 @@ $corner-radius: 30px;
 }
 
 @media screen and (max-width: 640px) {
-.ignore-pc {
-  display: inline;
-}
-.ignore-sp {
-  display: none;
-}
-.top {
-  h1 {
-    transform: translateY(-25px);
+  .ignore-pc {
+    display: inline;
   }
-  .main-visual-container {
+  .ignore-sp {
+    display: none;
+  }
+
+  #top {
+    // height: calc(100vh - 60px);
+    // margin: 0 2rem;
+    margin-top: 60px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    .main-visual-left {
-      display: grid;
-      grid-template-rows: 1fr auto auto auto;
-
-      text-align: left;
-
-      h1.theme-phrase {
-        font-weight: bolder;
-        font-size: 3.75rem;
-        margin: 0 30px -20px;
-      }
-
-      .event-date-and-location {
-        p {
-          font-size: 1.2rem;
-          font-weight: bold;
-          margin: 0 30px;
-        }
-      }
-
-      .decoration-wrapper {
-        position: relative;
-
-        .decoration {
-          position: absolute;
-          top: 0;
-          left: calc(2rem + 30px);
-          transform: rotate(90deg);
-          transform-origin: 0 0;
-
-          p {
-            margin: 0 0 -5px;
-            font-size: 0.8rem;
-          }
-        }
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 1fr 1fr;
+    padding: 0 0;
+    .tagline-box {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+      .tagline {
+        transform: rotate(90deg);
+        transform-origin: top left;
+        text-align: left;
+        // margin: 0 0 30px 0;
+        font-size: 0.65rem;
+        margin-left: 50px;
+        width: 300%;
       }
     }
-
-    .main-visual-right {
+    .information {
+      grid-column: 1 / span 2;
+      grid-row: 2 / span 1;
+      text-align: left;
+      align-items: end;
+      .theme {
+        font-weight: bolder;
+        font-size: 2rem;
+        margin: 0 0 30px 20px;
+      }
+  
       img {
-        // max-width: 65vw;
-        // max-height: 65vh;
-        width: 100%;
-        height: auto;
+        margin-top: -4em;
+      }
+    
+      .event-date-and-location {
+      }
+    }
+    .character {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 1;
+      overflow-x: hidden;
+      img {
+        width: 110%;
       }
     }
   }
-}
-#colored_zone {
+
+  #colored_zone {
     .about-dojocon {
       padding: 60px 30px 60px 30px;
       .short {
