--- a/_draft/2021/_sass/_variables.scss
+++ b/_draft/2021/_sass/_variables.scss
@@ -18,3 +18,6 @@ $brown: #4f2c13;
 $facebook-color: #3b5998;
 $twitter-color: #1da1f2;
 $line-color: #00bb00;
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
