--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -13,6 +13,7 @@
 .navbar-expand-lg .navbar-collapse {
   justify-content: flex-end;
 }
+
 .link_button{
   position: relative;
   display: flex;
@@ -20,8 +21,8 @@
   align-items: center;
   margin: 0 auto;
   max-width: 240px;
-  padding: 5px 25px;
-  color: #5a1891;
+  padding: 5px 30px;
+  color: white;
   transition: 0.3s ease-in-out;
   font-weight: normal;
   background: $main-color;
@@ -32,6 +33,22 @@
   border-bottom: solid 2px #5c1b29;
   transform: translateY(3px);
 }
+.disable_button{
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 240px;
+  padding: 5px 30px;
+  color: #666;
+  transition: 0.3s ease-in-out;
+  font-weight: normal;
+  background: #ccc;
+  border-radius: 8px;
+  border-bottom: solid 5px #ddd;
+}
+
 @media screen and (max-width: 640px) {
   .navbar-brand {
     display: flex;
