お問い合わせフォームへのリンク

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
           <!--<a class="nav-item nav-link active" href="/contest">コンテスト</a>-->
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
-          <a class="nav-item nav-link active" href="/#contact">問い合わせ</a>
+          <a class="nav-item nav-link active" href="{{ site.contact }}">問い合わせ</a>
           <!-- <a class="nav-item nav-link active link_button" href="/#ticket" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a> -->
           <div class="disable_button">参加申し込み</div>
         </div>
