--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -324,6 +324,22 @@ $corner-radius: 30px;
   }
 }
 
+#staff {
+  padding: auto;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
+    list-style-type: none;
+    padding: 0;
+    li {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
+
 // タブレット
 @media screen and (max-width: 800px) {
   #colored_zone {
