footerページ下部固定

--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -4,6 +4,7 @@ footer {
   background-color: $secondary-color;
   color: #fff;
   padding-bottom: 12px;
+  margin-top: auto;
 }
 .footer-menu-list {
   list-style: none;
