--- a/_sass/global/page.scss
+++ b/_sass/global/page.scss
@@ -11,6 +11,9 @@ body {
   text-align: center;
   color: black;
   padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h2 {
