イベントページメッセージ表示追加

--- a/_sass/global/page.scss
+++ b/_sass/global/page.scss
@@ -578,3 +578,10 @@ table thead th {
     }
   }
 }
+
+.wait-for-a-moment {
+  font-size: 2em;
+  margin: 60px auto;
+  text-align: center;
+  width: 100%;
+}
