--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <footer>
   <nav class="share">
     <a href="https://www.facebook.com/share.php?u={{ site.url }}" target="_blank" class="share-facebook text-white" rel="noopener"><i class="fab fa-facebook-square"></i> Facebook でシェア</a>
-    <a href="https://twitter.com/share?url={{ site.url }}{{ page.url }}&text={{ site.title }} - {{ page.title }}&hashtags=DojoConJapan&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank" class="share-twitter text-white" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter でシェア</a>
+    <a href="https://twitter.com/share?url={{ site.url }}{{ page.url }}&text={{ site.title }} - {{ page.title }}&hashtags=DojoConJapan,coderdojo&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank" class="share-twitter text-white" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter でシェア</a>
     <a href="https://social-plugins.line.me/lineit/share?url={{ site.url }}{{ page.url }}" class="share-line text-white"><i class="fab fa-line"></i> LINE でシェア</a>
   </nav>
   <nav class="footer-menu">
     <ul class="footer-menu-list">
       <li><a href="/code-of-conduct">行動規範</a></li>
       <li><a href="/privacy">プライバシー・ポリシー</a></li>
-      <li><a href="https://www.facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">Facebook</a></li>
+      <li><a href="https://www.facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">Facebook</a></li>co
       <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a></li>
     </ul>
   </nav>
