--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     <ul class="footer-menu-list">
       <li><a href="/code-of-conduct">行動規範</a></li>
       <li><a href="/privacy">プライバシー・ポリシー</a></li>
-      <li><a href="https://www.facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">Facebook</a></li>co
+      <li><a href="https://www.facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">Facebook</a></li>
       <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a></li>
     </ul>
   </nav>
