地図画像のパス修正

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -324,6 +324,13 @@ $corner-radius: 30px;
   }
 }
 
+.map {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 #staff {
   padding: auto;
   ul {
