スタッフ一覧の間隔調整

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -336,7 +336,7 @@ $corner-radius: 30px;
   ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
     list-style-type: none;
     padding: 0;
