--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -26,13 +26,13 @@ footer {
       display: block;
     }
     .share-facebook {
-      background-color: $facebook-color;
+      background-color: $color-facebook;
     }
     .share-twitter {
-      background-color: $twitter-color;
+      background-color: $color-twitter;
     }
     .share-line {
-      background-color: $line-color;
+      background-color: $color-line;
       display: none;
     }
   }
