--- a/_sass/global/variables.scss
+++ b/_sass/global/variables.scss
@@ -1,20 +1,17 @@
 $main-color: #7e2639;
 $secondary-color: #642580;
 $third-color: #004466;
+$text-color: #ffffff;
+$color-necessary: #ffe6cc;
 
-$light-yellow: #fffacf;
+// SNS
+$color-facebook: #3b5998;
+$color-twitter: #1da1f2;
+$color-line: #00bb00;
 
-$light-green: #ebffd1;
-
+// 以下廃止予定
 $light-blue: #80d8ff;
-$blue-shadow: #418ebf;
 $light-gray: #f5f5f5;
 $gray: #aaa;
-$red: #ff955c;
-$light-red: #ffe6cc;
-$purple: #99a5ff;
 $brown: #4f2c13;
 
-$facebook-color: #3b5998;
-$twitter-color: #1da1f2;
-$line-color: #00bb00;
