--- a/_layouts/jiman_media.html
+++ b/_layouts/jiman_media.html
@@ -43,7 +43,7 @@ layout: default
     <div id="spacer" style="height: 2em;"></div>
     <a href="/dojos" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> 一覧に戻る</a>
     <br />
-    <a href="/" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> トップページに戻る</a>
+    {% include back-to-top.html %}
   </div>
 
 </div>
