--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
 
   <div class='post-content mt-5'>
     {{ content }}
-    <a href="/" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> トップページに戻る</a>  
+    {% include back-to-top.html %}
   </div>
 
 </div>
