--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,20 @@
 ---
 layout: default
 ---
-
-<div class="post-head">
-  <h1 class="post-title">{{ page.title }}</h1>
-</div>
-
-<div class="post">
-  <div class='post-content'>
-    {{ content }}
-    <a href="/">トップページに戻る</a>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 col-12">
+      <h1>{{ page.title }}</h1>
+      <p>{{ page.subtitle }}</p>
+    </div>
+  </div>
+  <div class="air"></div>
+  <div id=''>
+    <div class="post">
+      <div class='post-content'>
+        {{ content }}
+        {% include back-to-top.html %}
+      </div>
+    </div>
   </div>
 </div>
