--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -17,7 +17,7 @@
     max-width: 800px;
     margin: auto;
     h2 {
-      text-align: center;
+      text-align: left;
     }
     img {
       display: block;
@@ -29,7 +29,7 @@
 }
 
 .post-head {
-  margin-bottom: 60px;
+  // margin-bottom: 60px;
   padding: $navbar 0;
   padding-top: 60px;
   h2 {
