大博覧会ページ

--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -60,7 +60,7 @@
   h2 {
     font-size: 1.2em;
     margin-bottom: 0.5em;
-    background-color: $main-color;
+    background-color: $third-color;
     color: white;
     padding: 10px;
   }
@@ -68,15 +68,30 @@
     font-size: 1em;
     text-decoration: underline;
   }
+  ol {
+    li {
+      margin-bottom: 1em;
+    }
+  }
   a {
     color: $main-color;
     &:hover {
       text-decoration: underline;
     }
   }
-  ol {
-    li {
-      margin-bottom: 1em;
+
+  .entry {
+    text-align: center;
+    margin: 6em 0;
+    a {
+      &.condition {
+        font-size: 1.4em;
+        margin: 2em 0;
+      }
+      &.button {
+        color: white;
+        font-size: 1.6em;
+      }
     }
   }
 }
