--- a/_sass/global/base.scss
+++ b/_sass/global/base.scss
@@ -66,9 +66,9 @@ section {
 }
 
 .button {
-  background-color: $secondary-color;
+  background-color: $main-color;
   border-radius: 10px;
-  box-shadow: 0px 6px $third-color;
+  box-shadow: 0px 6px #5c1b29;
   color: #fff;
   display: block;
   margin: 0 auto 12px;
