--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -60,9 +60,10 @@
   h2 {
     font-size: 1.2em;
     margin-bottom: 0.5em;
-    background-color: $third-color;
+    background-color: $secondary-color;
     color: white;
     padding: 10px;
+    border-radius: 12px;
   }
   h3 {
     font-size: 1em;
