--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -93,6 +93,9 @@
         color: white;
         font-size: 1.6em;
       }
-    }
+      &:hover {
+        text-decoration: none;
+      }
+      }
   }
 }
