--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -60,7 +60,7 @@
   h2 {
     font-size: 1.2em;
     margin-bottom: 0.5em;
-    background-color: $secondary-color;
+    background-color: $main-color;
     color: white;
     padding: 10px;
     border-radius: 6px;
@@ -96,6 +96,6 @@
       &:hover {
         text-decoration: none;
       }
-      }
+    }
   }
 }
