ホバー時の色の変更

--- a/_sass/global/base.scss
+++ b/_sass/global/base.scss
@@ -298,7 +298,10 @@ table thead th {
 /* button */
 .btn-main{
     background-color: $main-color;
-    color: white;
+    color: $text-color;
+    &:hover {
+      color: $text-color;
+    }
 }
 
 .btn-secondary {
