お知らせのモバイル表示調整

--- a/_sass/global/mobile.scss
+++ b/_sass/global/mobile.scss
@@ -1,2 +1,8 @@
 @media screen and (max-width: 640px) {
+    #news {
+        &.post {
+            padding-left: 1em;
+            padding-right: 1em;
+        }
+    }
 }
