--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -2,9 +2,9 @@
   <div class="p-3 bg-white">
     <a href="{{ post.url }}" class="text-decoration-none">
       {% if post.thumbnail %}
-      <img src="/img/{{ site.year }}/post/{{ post.thumbnail }}" alt="{{ post.title }} のサムネイル画像" class="article-thumbnail" loading="lazy">
+      <img src="{{ post.thumbnail }}" alt="{{ post.title }} のサムネイル画像" class="article-thumbnail" loading="lazy">
       {% else %}
-      <img src="/img/{{ site.year }}/ogp/1200x630_02.jpg" alt="{{ post.title }} のサムネイル画像" class="article-thumbnail" loading="lazy">
+      <img src="/img/{{ site.year }}/ogp/default.jpg" alt="{{ post.title }} のサムネイル画像" class="article-thumbnail" loading="lazy">
       {% endif %}
       <div class="mt-2">
         <p class="article-date mt-2">{{ post.date | date:"%Y.%-m.%d" }}</p>
