ボタンリンクの文字色のスタイルが反映されるように修正

--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -78,10 +78,14 @@
       margin-bottom: 1em;
     }
   }
-  a {
-    color: $main-color;
-    &:hover {
-      text-decoration: underline;
+
+  /* ボタンリンク以外の anchor のスタイルを定義 */
+  :not(.framed_button) {
+    & > a {
+      color: $main-color;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
