--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -468,3 +468,25 @@ $corner-radius: 30px;
 #news {
   padding: 0 0 3rem 0;  
 }
+
+#sponsors {
+  margin: 20px 0;
+  .sponsors-container {
+    .sponsor-logo-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+
+      img.sponsor-logo {
+        max-width: 20vw;
+        transition: 0.5s;
+
+        &:hover {
+          transform: scale(1.1);
+          opacity: 0.8;
+        }
+      }
+    }
+  }
+}
