--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -470,7 +470,7 @@ $corner-radius: 30px;
 }
 
 #sponsors {
-  margin: 20px 0;
+  margin: 2em 0 6em 0;
   .sponsors-container {
     .sponsor-logo-container {
       display: flex;
