--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,8 @@ $navbar: 60px;
 @import 'pages/index';
 @import 'pages/sessions';
 @import 'pages/workshop';
+@import 'pages/sponsors';
+
 
 @import 'includes/navbar';
 @import 'includes/footer';
