トップページのIDの値を変更

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -469,7 +469,7 @@ $corner-radius: 30px;
   padding: 0 0 3rem 0;  
 }
 
-#sponsors {
+#sponsors_index {
   margin: 2em 0 6em 0;
   .sponsors-container {
     .sponsor-logo-container {
