--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,8 +19,11 @@
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
           <a class="nav-item nav-link active" href="{{ site.contact }}" target="_blank">問い合わせ</a>
-          <!-- <a class="nav-item nav-link active link_button" href="/#ticket" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a> -->
+          {% if site.registration %}
+          <a class="nav-item nav-link active link_button" href="/registration/" target="_blank" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a>
+          {% else %}
           <div class="disable_button">参加申し込み</div>
+          {% endif %}
         </div>
       </div>
   </nav>
