--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,7 @@
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
           <a class="nav-item nav-link active" href="{{ site.contact }}" target="_blank">問い合わせ</a>
           {% if site.registration %}
-          <a class="nav-item nav-link active link_button" href="/registration/" target="_blank" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a>
+          <a class="nav-item nav-link active link_button" href="/registration/" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a>
           {% else %}
           <div class="disable_button">参加申し込み</div>
           {% endif %}
