メニューのお知らせはお知らせ一覧へ

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/#top">TOP</a>
           <!--<a class="nav-item nav-link active" href="/#outline">概要</a>-->
-          <a class="nav-item nav-link active" href="/#news">お知らせ</a>
+          <a class="nav-item nav-link active" href="/news">お知らせ</a>
           <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
           <a class="nav-item nav-link active" href="/sessions">セッション</a>
           <a class="nav-item nav-link active" href="/events">イベント企画</a>
