--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   {% include googleanalytics.html %}
   {% endif %}
   {% if page.title %}
-  <title>{{ page.title }} | {{ site.title }} {{ site.year }}</title>
+  <title>{{ page.title | strip_html }} | {{ site.title }} {{ site.year }}</title>
   {% else %}
   <title>{{ site.title }} {{ site.year }} | {{ site.subtitle }}</title>
   {% endif %}
@@ -20,7 +20,7 @@
   <meta name="twitter:site"  content="@DojoConJapan" />
   <meta property="og:url"    content="{{ site.url }}{{ page.url }}" />
   {% if page.title %}
-  <meta property="og:title"  content="{{ page.title }} | {{ site.title }} {{ site.year }}" />
+  <meta property="og:title"  content="{{ page.title | strip_html }} | {{ site.title }} {{ site.year }}" />
   {% else %}
   <meta property="og:title"  content="{{ site.title }} {{ site.year }} | {{ site.subtitle }}" />
   {% endif %}
@@ -39,9 +39,9 @@
   <meta property="og:type" content="website" />
   {% endif %}
 
-  <meta property="og:description"  content="{{ site.description }}" />
-  <meta name="description"         content="{{ site.description }}" />
-  <meta name="twitter:description" content="{{ site.description }}" />
+  <meta property="og:description"  content="{{ site.description | strip_html }}" />
+  <meta name="description"         content="{{ site.description | strip_html }}" />
+  <meta name="twitter:description" content="{{ site.description | strip_html }}" />
 
   <meta property="fb:app_id" content="1750803431730303" />
 
