--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -550,6 +550,26 @@ $corner-radius: 30px;
           }
         }
       }
+
+      #individual-sponsors {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        div.individual-sponsor-name {
+          margin: 1em 2em;
+
+          a {
+            font-size: 1.5rem;
+
+            &:hover {
+              opacity: 0.8;
+              color: var(--gray-dark);
+              text-decoration: none;
+            }
+          }
+        }
+      }
     }
   }
 }
