個人スポンサー、リンクない人の対応

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -558,10 +558,9 @@ $corner-radius: 30px;
 
         div.individual-sponsor-name {
           margin: 1em 2em;
-
+          font-size: 1.2rem;
+          line-height: 1.2rem;
           a {
-            font-size: 1.5rem;
-
             &:hover {
               opacity: 0.8;
               color: var(--gray-dark);
