individual sponsor のテキストの位置を修正

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -555,6 +555,7 @@ $corner-radius: 30px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        align-items: center;
 
         div.individual-sponsor-name {
           margin: 1em 2em;
