ナビ追加、参加登録ページのサムネイル追加

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
           <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
           <a class="nav-item nav-link active" href="/sessions">セッション</a>
           <a class="nav-item nav-link active" href="/events">企画</a>
+          <a class="nav-item nav-link active" href="/exhibition">展示</a>
           <!--<a class="nav-item nav-link active" href="/contest">コンテスト</a>-->
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
