--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,9 +43,15 @@
   {% endif %}
 
   <meta property="og:url"          content="{{ site.url }}{{ page.url }}" />
+  {% if page.description %}
+  <meta property="og:description"  content="{{ page.description | strip_html | escape }}" />
+  <meta name="twitter:description" content="{{ page.description | strip_html | escape }}" />
+  <meta name="description"         content="{{ page.description | strip_html | escape }}" />
+  {% else %}
   <meta property="og:description"  content="{{ site.description | strip_html | escape }}" />
-  <meta name="description"         content="{{ site.description | strip_html | escape }}" />
   <meta name="twitter:description" content="{{ site.description | strip_html | escape }}" />
+  <meta name="description"         content="{{ site.description | strip_html | escape }}" />
+  {% endif %}
 
   {% if jekyll.environment == 'production' %}
   {% include googleanalytics.html %}
