--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <nav class="share">
     <a href="https://www.facebook.com/share.php?u={{ site.url }}" target="_blank" class="share-facebook text-white" rel="noopener"><i class="fab fa-facebook-square"></i> Facebook でシェア</a>
-    <a href="https://twitter.com/share?url={{ site.url }}{{ page.url }}&text={{ site.title }} - {{ page.title }}&hashtags=DojoConJapan,coderdojo&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank" class="share-twitter text-white" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter でシェア</a>
+    <a href="https://twitter.com/share?url={{ site.url }}{{ page.url }}&text={{ site.title }} - {{ page.title }}&hashtags=DojoConJapan,CoderDojo&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank" class="share-twitter text-white" rel="noopener"><i class="fab fa-twitter-square"></i> Twitter でシェア</a>
     <a href="https://social-plugins.line.me/lineit/share?url={{ site.url }}{{ page.url }}" class="share-line text-white"><i class="fab fa-line"></i> LINE でシェア</a>
   </nav>
   <nav class="footer-menu">
