Refactor: Add missing class .share-line in CSS

--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -22,7 +22,8 @@ footer {
       display: block;
     }
     .share-twitter,
-    .share-facebook {
+    .share-facebook,
+    .share-line {
       display: block;
     }
     .share-facebook {
