ymlファイルのregistrationを戻しました ymlファイルのregistrationを消去してしまうと他のmdファイルにたくさん用いられている、そのためif文を使わずに`index.md`と`navbar.html`の参加ボタンだけを無効化しました。

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,11 +20,8 @@
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
           <a class="nav-item nav-link active" href="{{ site.contact }}" target="_blank">問い合わせ</a>
-          {% if site.registration %}
-          <a class="nav-item nav-link active link_button" href="/registration/" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a>
-          {% else %}
+          <!-- <a class="nav-item nav-link active link_button" href="/registration/" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a> -->
           <div class="disable_button">参加申し込み</div>
-          {% endif %}
         </div>
       </div>
   </nav>
