--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbar-nav" style="padding-right: 10px;">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/#top">TOP</a>
-          <!--<a class="nav-item nav-link active" href="/#outline">概要</a>-->
+          <a class="nav-item nav-link active" href="/#outline">開催概要</a>
           <a class="nav-item nav-link active" href="/news">お知らせ</a>
           <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
           <a class="nav-item nav-link active" href="/sessions">セッション</a>
@@ -20,8 +20,7 @@
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
           <a class="nav-item nav-link active" href="{{ site.contact }}" target="_blank">問い合わせ</a>
-          <!-- <a class="nav-item nav-link active link_button" href="/registration/" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a> -->
-          <div class="disable_button">参加申し込み</div>
+          <!--<a class="nav-item nav-link active link_button" href="/registration" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申込</a>-->
         </div>
       </div>
   </nav>
