Refactor: ダックタイピング可能なようにブレているカラム名を統一

--- a/_sass/pages/sponsors.scss
+++ b/_sass/pages/sponsors.scss
@@ -54,7 +54,7 @@
           font-weight: bold;
           align-content: flex-start;
         }
-        .msg {
+        .message {
           padding-left: 15px;
           padding-right: 15px;
         }
