--- a/_sass/pages/sponsors.scss
+++ b/_sass/pages/sponsors.scss
@@ -4,8 +4,7 @@
   #bronze-sponsors {
     h3 {
       text-align: center;
-      margin-top: 2em;
-      margin-bottom: 1em;
+      margin-top:  200px;
     }
     ul {
       display: flex;
