--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-main fixed-top">
       <a class="navbar-brand" href="/#top">
-        <img src="/img/2023/logo_640x160.svg" width="290px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
+        <img src="/img/2023/logo_640x160.svg" width="290px" class="d-inline-block align-top" alt="DojoCon Japan 2023">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
