--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -24,8 +24,13 @@
       width: 100%;
       margin: auto;
       max-width: 600px;
-      &.full_width {
+      &.full_width1 {
         max-width: 100%;
+        margin-bottom: 3rem;
+      }
+      &.full_width2 {
+        max-width: 100%;
+        margin-top: 3rem;
       }
     }
   }
